--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "nuxt": "^3.4.2"
   },
   "dependencies": {
+    "brace-expansion": "^2.0.1",
     "nuxt-vuefire": "^0.1.6",
+    "tailwind": "^4.0.0",
     "vuefire": "^3.1.0"
   }
 }
