--- a/package.json
+++ b/package.json
@@ -14,9 +14,18 @@
     "nuxt": "^3.4.2"
   },
   "dependencies": {
+    "anychart": "^8.11.0",
+    "base64-img": "^1.0.4",
     "brace-expansion": "^2.0.1",
+    "chart.js": "^4.3.0",
+    "csv-parser": "^3.0.0",
+    "d3": "^7.8.4",
+    "fs": "^0.0.1-security",
     "nuxt-vuefire": "^0.1.6",
     "tailwind": "^4.0.0",
-    "vuefire": "^3.1.0"
+    "vue-head": "^2.2.0",
+    "vuefire": "^3.1.0",
+    "vuewordcloud": "^19.0.0",
+    "wordcloud": "^1.2.2"
   }
 }
