--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.6.7",
     "@types/node": "^18",
-    "nuxt": "^3.4.2"
+    "nuxt": "^3.4.2",
+    "prettier": "2.8.8"
   },
   "dependencies": {
     "anychart": "^8.11.0",
@@ -20,9 +21,11 @@
     "chart.js": "^4.3.0",
     "csv-parser": "^3.0.0",
     "d3": "^7.8.4",
+    "d3-geo": "^3.1.0",
     "fs": "^0.0.1-security",
     "nuxt-vuefire": "^0.1.6",
     "tailwind": "^4.0.0",
+    "topojson": "^3.0.2",
     "vue-head": "^2.2.0",
     "vuefire": "^3.1.0",
     "vuewordcloud": "^19.0.0",
