--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "brace-expansion": "^2.0.1",
     "chart.js": "^4.3.0",
     "csv-parser": "^3.0.0",
-    "d3": "^7.8.4",
+    "d3": "^7.8.5",
+    "d3-fetch": "^3.0.1",
     "d3-geo": "^3.1.0",
     "fs": "^0.0.1-security",
     "nuxt-vuefire": "^0.1.6",
