--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vue-chartjs": "^5.2.0",
     "vue-head": "^2.2.0",
     "vue-plotly": "^1.1.0",
+    "vue3-carousel": "^0.3.1",
     "vuefire": "^3.1.0",
     "vuewordcloud": "^19.0.0",
     "wordcloud": "^1.2.2"
