--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^4.3.0",
     "csv-parser": "^3.0.0",
     "d3": "^7.8.5",
+    "d3-cloud": "^1.2.5",
     "d3-fetch": "^3.0.1",
     "d3-geo": "^3.1.0",
     "fs": "^0.0.1-security",
